# shakespeareanize

./: .gitignore  README.md  conversions.json  shakespeareanize.py  test
python/: shakespeare.bat  shakespeareanize.py
rust/: Cargo.toml
rust/src/: cli.rs  conversions.rs  main.rs
rust_multithread/: Cargo.toml
rust_multithread/src/: cli.rs  main.rs
