[package]
name = "shakespearize"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive", "env", "color"] }
memmap2 = { version = "0.6.1", features = ["stable_deref_trait"] }
num_cpus = "1.15.0"
serde = "1.0.163"
serde_json = "1.0.96"
